src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> DECLARATION LBRACE declarations RBRACE INSTRUCTION LBRACE instructions RBRACE
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> declaration
Rule 4     declarations -> empty
Rule 5     declaration -> type_declaration
Rule 6     declaration -> const_declaration
Rule 7     type_declaration -> type var_list SEMICOL
Rule 8     var_list -> var_list COMMA var_item
Rule 9     var_list -> var_item
Rule 10    var_item -> IDF
Rule 11    var_item -> IDF LBRACKET INTEGER RBRACKET
Rule 12    var_item -> IDF EQUALS const_value
Rule 13    var_item -> IDF LBRACKET RBRACKET EQUALS STRING
Rule 14    type -> TYPE_INTEGER
Rule 15    type -> TYPE_FLOAT
Rule 16    type -> TYPE_CHAR
Rule 17    const_declaration -> CONST type IDF EQUALS const_value SEMICOL
Rule 18    const_value -> INTEGER
Rule 19    const_value -> FLOAT
Rule 20    const_value -> CHAR
Rule 21    instructions -> instructions instruction
Rule 22    instructions -> instruction
Rule 23    instructions -> empty
Rule 24    instruction -> assignment SEMICOL
Rule 25    instruction -> array_assignment SEMICOL
Rule 26    instruction -> if_statement
Rule 27    instruction -> for_loop
Rule 28    instruction -> io_statement SEMICOL
Rule 29    assignment -> IDF EQUALS expression
Rule 30    array_assignment -> IDF LBRACKET expression RBRACKET EQUALS expression
Rule 31    expression -> expression PLUS expression
Rule 32    expression -> expression MINUS expression
Rule 33    expression -> expression MULTIPLY expression
Rule 34    expression -> expression DIVIDE expression
Rule 35    expression -> LPAREN expression RPAREN
Rule 36    expression -> IDF
Rule 37    expression -> IDF LBRACKET expression RBRACKET
Rule 38    expression -> INTEGER
Rule 39    expression -> FLOAT
Rule 40    expression -> CHAR
Rule 41    if_statement -> IF LPAREN condition RPAREN LBRACE instructions RBRACE
Rule 42    if_statement -> IF LPAREN condition RPAREN LBRACE instructions RBRACE ELSE LBRACE instructions RBRACE
Rule 43    for_loop -> FOR LPAREN assignment COLOM condition COLOM assignment RPAREN LBRACE instructions RBRACE
Rule 44    condition -> expression comparison_op expression
Rule 45    condition -> condition AND condition
Rule 46    condition -> condition OR condition
Rule 47    condition -> NOT condition
Rule 48    condition -> LPAREN condition RPAREN
Rule 49    comparison_op -> GT
Rule 50    comparison_op -> LT
Rule 51    comparison_op -> GE
Rule 52    comparison_op -> LE
Rule 53    comparison_op -> EQ
Rule 54    comparison_op -> NE
Rule 55    io_statement -> READ LPAREN IDF RPAREN
Rule 56    io_statement -> WRITE LPAREN write_list RPAREN
Rule 57    write_list -> write_list COMMA expression
Rule 58    write_list -> expression
Rule 59    write_list -> STRING
Rule 60    write_list -> write_list COMMA STRING
Rule 61    empty -> <empty>

Terminals, with rules where they appear

AND                  : 45
CHAR                 : 20 40
COLOM                : 43 43
COMMA                : 8 57 60
CONST                : 17
DECLARATION          : 1
DIVIDE               : 34
ELSE                 : 42
EQ                   : 53
EQUALS               : 12 13 17 29 30
FLOAT                : 19 39
FOR                  : 43
GE                   : 51
GT                   : 49
IDF                  : 10 11 12 13 17 29 30 36 37 55
IF                   : 41 42
INSTRUCTION          : 1
INTEGER              : 11 18 38
LBRACE               : 1 1 41 42 42 43
LBRACKET             : 11 13 30 37
LE                   : 52
LPAREN               : 35 41 42 43 48 55 56
LT                   : 50
MINUS                : 32
MULTIPLY             : 33
NE                   : 54
NOT                  : 47
OR                   : 46
PLUS                 : 31
RBRACE               : 1 1 41 42 42 43
RBRACKET             : 11 13 30 37
READ                 : 55
RPAREN               : 35 41 42 43 48 55 56
SEMICOL              : 7 17 24 25 28
STRING               : 13 59 60
TYPE_CHAR            : 16
TYPE_FLOAT           : 15
TYPE_INTEGER         : 14
WRITE                : 56
error                : 

Nonterminals, with rules where they appear

array_assignment     : 25
assignment           : 24 43 43
comparison_op        : 44
condition            : 41 42 43 45 45 46 46 47 48
const_declaration    : 6
const_value          : 12 17
declaration          : 2 3
declarations         : 1 2
empty                : 4 23
expression           : 29 30 30 31 31 32 32 33 33 34 34 35 37 44 44 57 58
for_loop             : 27
if_statement         : 26
instruction          : 21 22
instructions         : 1 21 41 42 42 43
io_statement         : 28
program              : 0
type                 : 7 17
type_declaration     : 5
var_item             : 8 9
var_list             : 7 8
write_list           : 56 57 60

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . DECLARATION LBRACE declarations RBRACE INSTRUCTION LBRACE instructions RBRACE

    DECLARATION     shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> DECLARATION . LBRACE declarations RBRACE INSTRUCTION LBRACE instructions RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) program -> DECLARATION LBRACE . declarations RBRACE INSTRUCTION LBRACE instructions RBRACE
    (2) declarations -> . declarations declaration
    (3) declarations -> . declaration
    (4) declarations -> . empty
    (5) declaration -> . type_declaration
    (6) declaration -> . const_declaration
    (61) empty -> .
    (7) type_declaration -> . type var_list SEMICOL
    (17) const_declaration -> . CONST type IDF EQUALS const_value SEMICOL
    (14) type -> . TYPE_INTEGER
    (15) type -> . TYPE_FLOAT
    (16) type -> . TYPE_CHAR

  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for TYPE_INTEGER resolved as shift
  ! shift/reduce conflict for TYPE_FLOAT resolved as shift
  ! shift/reduce conflict for TYPE_CHAR resolved as shift
    RBRACE          reduce using rule 61 (empty -> .)
    CONST           shift and go to state 10
    TYPE_INTEGER    shift and go to state 11
    TYPE_FLOAT      shift and go to state 12
    TYPE_CHAR       shift and go to state 13

  ! CONST           [ reduce using rule 61 (empty -> .) ]
  ! TYPE_INTEGER    [ reduce using rule 61 (empty -> .) ]
  ! TYPE_FLOAT      [ reduce using rule 61 (empty -> .) ]
  ! TYPE_CHAR       [ reduce using rule 61 (empty -> .) ]

    declarations                   shift and go to state 4
    declaration                    shift and go to state 5
    empty                          shift and go to state 6
    type_declaration               shift and go to state 7
    const_declaration              shift and go to state 8
    type                           shift and go to state 9

state 4

    (1) program -> DECLARATION LBRACE declarations . RBRACE INSTRUCTION LBRACE instructions RBRACE
    (2) declarations -> declarations . declaration
    (5) declaration -> . type_declaration
    (6) declaration -> . const_declaration
    (7) type_declaration -> . type var_list SEMICOL
    (17) const_declaration -> . CONST type IDF EQUALS const_value SEMICOL
    (14) type -> . TYPE_INTEGER
    (15) type -> . TYPE_FLOAT
    (16) type -> . TYPE_CHAR

    RBRACE          shift and go to state 14
    CONST           shift and go to state 10
    TYPE_INTEGER    shift and go to state 11
    TYPE_FLOAT      shift and go to state 12
    TYPE_CHAR       shift and go to state 13

    declaration                    shift and go to state 15
    type_declaration               shift and go to state 7
    const_declaration              shift and go to state 8
    type                           shift and go to state 9

state 5

    (3) declarations -> declaration .

    RBRACE          reduce using rule 3 (declarations -> declaration .)
    CONST           reduce using rule 3 (declarations -> declaration .)
    TYPE_INTEGER    reduce using rule 3 (declarations -> declaration .)
    TYPE_FLOAT      reduce using rule 3 (declarations -> declaration .)
    TYPE_CHAR       reduce using rule 3 (declarations -> declaration .)


state 6

    (4) declarations -> empty .

    RBRACE          reduce using rule 4 (declarations -> empty .)
    CONST           reduce using rule 4 (declarations -> empty .)
    TYPE_INTEGER    reduce using rule 4 (declarations -> empty .)
    TYPE_FLOAT      reduce using rule 4 (declarations -> empty .)
    TYPE_CHAR       reduce using rule 4 (declarations -> empty .)


state 7

    (5) declaration -> type_declaration .

    RBRACE          reduce using rule 5 (declaration -> type_declaration .)
    CONST           reduce using rule 5 (declaration -> type_declaration .)
    TYPE_INTEGER    reduce using rule 5 (declaration -> type_declaration .)
    TYPE_FLOAT      reduce using rule 5 (declaration -> type_declaration .)
    TYPE_CHAR       reduce using rule 5 (declaration -> type_declaration .)


state 8

    (6) declaration -> const_declaration .

    RBRACE          reduce using rule 6 (declaration -> const_declaration .)
    CONST           reduce using rule 6 (declaration -> const_declaration .)
    TYPE_INTEGER    reduce using rule 6 (declaration -> const_declaration .)
    TYPE_FLOAT      reduce using rule 6 (declaration -> const_declaration .)
    TYPE_CHAR       reduce using rule 6 (declaration -> const_declaration .)


state 9

    (7) type_declaration -> type . var_list SEMICOL
    (8) var_list -> . var_list COMMA var_item
    (9) var_list -> . var_item
    (10) var_item -> . IDF
    (11) var_item -> . IDF LBRACKET INTEGER RBRACKET
    (12) var_item -> . IDF EQUALS const_value
    (13) var_item -> . IDF LBRACKET RBRACKET EQUALS STRING

    IDF             shift and go to state 18

    var_list                       shift and go to state 16
    var_item                       shift and go to state 17

state 10

    (17) const_declaration -> CONST . type IDF EQUALS const_value SEMICOL
    (14) type -> . TYPE_INTEGER
    (15) type -> . TYPE_FLOAT
    (16) type -> . TYPE_CHAR

    TYPE_INTEGER    shift and go to state 11
    TYPE_FLOAT      shift and go to state 12
    TYPE_CHAR       shift and go to state 13

    type                           shift and go to state 19

state 11

    (14) type -> TYPE_INTEGER .

    IDF             reduce using rule 14 (type -> TYPE_INTEGER .)


state 12

    (15) type -> TYPE_FLOAT .

    IDF             reduce using rule 15 (type -> TYPE_FLOAT .)


state 13

    (16) type -> TYPE_CHAR .

    IDF             reduce using rule 16 (type -> TYPE_CHAR .)


state 14

    (1) program -> DECLARATION LBRACE declarations RBRACE . INSTRUCTION LBRACE instructions RBRACE

    INSTRUCTION     shift and go to state 20


state 15

    (2) declarations -> declarations declaration .

    RBRACE          reduce using rule 2 (declarations -> declarations declaration .)
    CONST           reduce using rule 2 (declarations -> declarations declaration .)
    TYPE_INTEGER    reduce using rule 2 (declarations -> declarations declaration .)
    TYPE_FLOAT      reduce using rule 2 (declarations -> declarations declaration .)
    TYPE_CHAR       reduce using rule 2 (declarations -> declarations declaration .)


state 16

    (7) type_declaration -> type var_list . SEMICOL
    (8) var_list -> var_list . COMMA var_item

    SEMICOL         shift and go to state 21
    COMMA           shift and go to state 22


state 17

    (9) var_list -> var_item .

    SEMICOL         reduce using rule 9 (var_list -> var_item .)
    COMMA           reduce using rule 9 (var_list -> var_item .)


state 18

    (10) var_item -> IDF .
    (11) var_item -> IDF . LBRACKET INTEGER RBRACKET
    (12) var_item -> IDF . EQUALS const_value
    (13) var_item -> IDF . LBRACKET RBRACKET EQUALS STRING

    SEMICOL         reduce using rule 10 (var_item -> IDF .)
    COMMA           reduce using rule 10 (var_item -> IDF .)
    LBRACKET        shift and go to state 23
    EQUALS          shift and go to state 24


state 19

    (17) const_declaration -> CONST type . IDF EQUALS const_value SEMICOL

    IDF             shift and go to state 25


state 20

    (1) program -> DECLARATION LBRACE declarations RBRACE INSTRUCTION . LBRACE instructions RBRACE

    LBRACE          shift and go to state 26


state 21

    (7) type_declaration -> type var_list SEMICOL .

    RBRACE          reduce using rule 7 (type_declaration -> type var_list SEMICOL .)
    CONST           reduce using rule 7 (type_declaration -> type var_list SEMICOL .)
    TYPE_INTEGER    reduce using rule 7 (type_declaration -> type var_list SEMICOL .)
    TYPE_FLOAT      reduce using rule 7 (type_declaration -> type var_list SEMICOL .)
    TYPE_CHAR       reduce using rule 7 (type_declaration -> type var_list SEMICOL .)


state 22

    (8) var_list -> var_list COMMA . var_item
    (10) var_item -> . IDF
    (11) var_item -> . IDF LBRACKET INTEGER RBRACKET
    (12) var_item -> . IDF EQUALS const_value
    (13) var_item -> . IDF LBRACKET RBRACKET EQUALS STRING

    IDF             shift and go to state 18

    var_item                       shift and go to state 27

state 23

    (11) var_item -> IDF LBRACKET . INTEGER RBRACKET
    (13) var_item -> IDF LBRACKET . RBRACKET EQUALS STRING

    INTEGER         shift and go to state 28
    RBRACKET        shift and go to state 29


state 24

    (12) var_item -> IDF EQUALS . const_value
    (18) const_value -> . INTEGER
    (19) const_value -> . FLOAT
    (20) const_value -> . CHAR

    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 32
    CHAR            shift and go to state 33

    const_value                    shift and go to state 30

state 25

    (17) const_declaration -> CONST type IDF . EQUALS const_value SEMICOL

    EQUALS          shift and go to state 34


state 26

    (1) program -> DECLARATION LBRACE declarations RBRACE INSTRUCTION LBRACE . instructions RBRACE
    (21) instructions -> . instructions instruction
    (22) instructions -> . instruction
    (23) instructions -> . empty
    (24) instruction -> . assignment SEMICOL
    (25) instruction -> . array_assignment SEMICOL
    (26) instruction -> . if_statement
    (27) instruction -> . for_loop
    (28) instruction -> . io_statement SEMICOL
    (61) empty -> .
    (29) assignment -> . IDF EQUALS expression
    (30) array_assignment -> . IDF LBRACKET expression RBRACKET EQUALS expression
    (41) if_statement -> . IF LPAREN condition RPAREN LBRACE instructions RBRACE
    (42) if_statement -> . IF LPAREN condition RPAREN LBRACE instructions RBRACE ELSE LBRACE instructions RBRACE
    (43) for_loop -> . FOR LPAREN assignment COLOM condition COLOM assignment RPAREN LBRACE instructions RBRACE
    (55) io_statement -> . READ LPAREN IDF RPAREN
    (56) io_statement -> . WRITE LPAREN write_list RPAREN

  ! shift/reduce conflict for IDF resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
    RBRACE          reduce using rule 61 (empty -> .)
    IDF             shift and go to state 43
    IF              shift and go to state 44
    FOR             shift and go to state 45
    READ            shift and go to state 46
    WRITE           shift and go to state 47

  ! IDF             [ reduce using rule 61 (empty -> .) ]
  ! IF              [ reduce using rule 61 (empty -> .) ]
  ! FOR             [ reduce using rule 61 (empty -> .) ]
  ! READ            [ reduce using rule 61 (empty -> .) ]
  ! WRITE           [ reduce using rule 61 (empty -> .) ]

    instructions                   shift and go to state 35
    instruction                    shift and go to state 36
    empty                          shift and go to state 37
    assignment                     shift and go to state 38
    array_assignment               shift and go to state 39
    if_statement                   shift and go to state 40
    for_loop                       shift and go to state 41
    io_statement                   shift and go to state 42

state 27

    (8) var_list -> var_list COMMA var_item .

    SEMICOL         reduce using rule 8 (var_list -> var_list COMMA var_item .)
    COMMA           reduce using rule 8 (var_list -> var_list COMMA var_item .)


state 28

    (11) var_item -> IDF LBRACKET INTEGER . RBRACKET

    RBRACKET        shift and go to state 48


state 29

    (13) var_item -> IDF LBRACKET RBRACKET . EQUALS STRING

    EQUALS          shift and go to state 49


state 30

    (12) var_item -> IDF EQUALS const_value .

    SEMICOL         reduce using rule 12 (var_item -> IDF EQUALS const_value .)
    COMMA           reduce using rule 12 (var_item -> IDF EQUALS const_value .)


state 31

    (18) const_value -> INTEGER .

    SEMICOL         reduce using rule 18 (const_value -> INTEGER .)
    COMMA           reduce using rule 18 (const_value -> INTEGER .)


state 32

    (19) const_value -> FLOAT .

    SEMICOL         reduce using rule 19 (const_value -> FLOAT .)
    COMMA           reduce using rule 19 (const_value -> FLOAT .)


state 33

    (20) const_value -> CHAR .

    SEMICOL         reduce using rule 20 (const_value -> CHAR .)
    COMMA           reduce using rule 20 (const_value -> CHAR .)


state 34

    (17) const_declaration -> CONST type IDF EQUALS . const_value SEMICOL
    (18) const_value -> . INTEGER
    (19) const_value -> . FLOAT
    (20) const_value -> . CHAR

    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 32
    CHAR            shift and go to state 33

    const_value                    shift and go to state 50

state 35

    (1) program -> DECLARATION LBRACE declarations RBRACE INSTRUCTION LBRACE instructions . RBRACE
    (21) instructions -> instructions . instruction
    (24) instruction -> . assignment SEMICOL
    (25) instruction -> . array_assignment SEMICOL
    (26) instruction -> . if_statement
    (27) instruction -> . for_loop
    (28) instruction -> . io_statement SEMICOL
    (29) assignment -> . IDF EQUALS expression
    (30) array_assignment -> . IDF LBRACKET expression RBRACKET EQUALS expression
    (41) if_statement -> . IF LPAREN condition RPAREN LBRACE instructions RBRACE
    (42) if_statement -> . IF LPAREN condition RPAREN LBRACE instructions RBRACE ELSE LBRACE instructions RBRACE
    (43) for_loop -> . FOR LPAREN assignment COLOM condition COLOM assignment RPAREN LBRACE instructions RBRACE
    (55) io_statement -> . READ LPAREN IDF RPAREN
    (56) io_statement -> . WRITE LPAREN write_list RPAREN

    RBRACE          shift and go to state 51
    IDF             shift and go to state 43
    IF              shift and go to state 44
    FOR             shift and go to state 45
    READ            shift and go to state 46
    WRITE           shift and go to state 47

    instruction                    shift and go to state 52
    assignment                     shift and go to state 38
    array_assignment               shift and go to state 39
    if_statement                   shift and go to state 40
    for_loop                       shift and go to state 41
    io_statement                   shift and go to state 42

state 36

    (22) instructions -> instruction .

    RBRACE          reduce using rule 22 (instructions -> instruction .)
    IDF             reduce using rule 22 (instructions -> instruction .)
    IF              reduce using rule 22 (instructions -> instruction .)
    FOR             reduce using rule 22 (instructions -> instruction .)
    READ            reduce using rule 22 (instructions -> instruction .)
    WRITE           reduce using rule 22 (instructions -> instruction .)


state 37

    (23) instructions -> empty .

    RBRACE          reduce using rule 23 (instructions -> empty .)
    IDF             reduce using rule 23 (instructions -> empty .)
    IF              reduce using rule 23 (instructions -> empty .)
    FOR             reduce using rule 23 (instructions -> empty .)
    READ            reduce using rule 23 (instructions -> empty .)
    WRITE           reduce using rule 23 (instructions -> empty .)


state 38

    (24) instruction -> assignment . SEMICOL

    SEMICOL         shift and go to state 53


state 39

    (25) instruction -> array_assignment . SEMICOL

    SEMICOL         shift and go to state 54


state 40

    (26) instruction -> if_statement .

    RBRACE          reduce using rule 26 (instruction -> if_statement .)
    IDF             reduce using rule 26 (instruction -> if_statement .)
    IF              reduce using rule 26 (instruction -> if_statement .)
    FOR             reduce using rule 26 (instruction -> if_statement .)
    READ            reduce using rule 26 (instruction -> if_statement .)
    WRITE           reduce using rule 26 (instruction -> if_statement .)


state 41

    (27) instruction -> for_loop .

    RBRACE          reduce using rule 27 (instruction -> for_loop .)
    IDF             reduce using rule 27 (instruction -> for_loop .)
    IF              reduce using rule 27 (instruction -> for_loop .)
    FOR             reduce using rule 27 (instruction -> for_loop .)
    READ            reduce using rule 27 (instruction -> for_loop .)
    WRITE           reduce using rule 27 (instruction -> for_loop .)


state 42

    (28) instruction -> io_statement . SEMICOL

    SEMICOL         shift and go to state 55


state 43

    (29) assignment -> IDF . EQUALS expression
    (30) array_assignment -> IDF . LBRACKET expression RBRACKET EQUALS expression

    EQUALS          shift and go to state 56
    LBRACKET        shift and go to state 57


state 44

    (41) if_statement -> IF . LPAREN condition RPAREN LBRACE instructions RBRACE
    (42) if_statement -> IF . LPAREN condition RPAREN LBRACE instructions RBRACE ELSE LBRACE instructions RBRACE

    LPAREN          shift and go to state 58


state 45

    (43) for_loop -> FOR . LPAREN assignment COLOM condition COLOM assignment RPAREN LBRACE instructions RBRACE

    LPAREN          shift and go to state 59


state 46

    (55) io_statement -> READ . LPAREN IDF RPAREN

    LPAREN          shift and go to state 60


state 47

    (56) io_statement -> WRITE . LPAREN write_list RPAREN

    LPAREN          shift and go to state 61


state 48

    (11) var_item -> IDF LBRACKET INTEGER RBRACKET .

    SEMICOL         reduce using rule 11 (var_item -> IDF LBRACKET INTEGER RBRACKET .)
    COMMA           reduce using rule 11 (var_item -> IDF LBRACKET INTEGER RBRACKET .)


state 49

    (13) var_item -> IDF LBRACKET RBRACKET EQUALS . STRING

    STRING          shift and go to state 62


state 50

    (17) const_declaration -> CONST type IDF EQUALS const_value . SEMICOL

    SEMICOL         shift and go to state 63


state 51

    (1) program -> DECLARATION LBRACE declarations RBRACE INSTRUCTION LBRACE instructions RBRACE .

    $end            reduce using rule 1 (program -> DECLARATION LBRACE declarations RBRACE INSTRUCTION LBRACE instructions RBRACE .)


state 52

    (21) instructions -> instructions instruction .

    RBRACE          reduce using rule 21 (instructions -> instructions instruction .)
    IDF             reduce using rule 21 (instructions -> instructions instruction .)
    IF              reduce using rule 21 (instructions -> instructions instruction .)
    FOR             reduce using rule 21 (instructions -> instructions instruction .)
    READ            reduce using rule 21 (instructions -> instructions instruction .)
    WRITE           reduce using rule 21 (instructions -> instructions instruction .)


state 53

    (24) instruction -> assignment SEMICOL .

    RBRACE          reduce using rule 24 (instruction -> assignment SEMICOL .)
    IDF             reduce using rule 24 (instruction -> assignment SEMICOL .)
    IF              reduce using rule 24 (instruction -> assignment SEMICOL .)
    FOR             reduce using rule 24 (instruction -> assignment SEMICOL .)
    READ            reduce using rule 24 (instruction -> assignment SEMICOL .)
    WRITE           reduce using rule 24 (instruction -> assignment SEMICOL .)


state 54

    (25) instruction -> array_assignment SEMICOL .

    RBRACE          reduce using rule 25 (instruction -> array_assignment SEMICOL .)
    IDF             reduce using rule 25 (instruction -> array_assignment SEMICOL .)
    IF              reduce using rule 25 (instruction -> array_assignment SEMICOL .)
    FOR             reduce using rule 25 (instruction -> array_assignment SEMICOL .)
    READ            reduce using rule 25 (instruction -> array_assignment SEMICOL .)
    WRITE           reduce using rule 25 (instruction -> array_assignment SEMICOL .)


state 55

    (28) instruction -> io_statement SEMICOL .

    RBRACE          reduce using rule 28 (instruction -> io_statement SEMICOL .)
    IDF             reduce using rule 28 (instruction -> io_statement SEMICOL .)
    IF              reduce using rule 28 (instruction -> io_statement SEMICOL .)
    FOR             reduce using rule 28 (instruction -> io_statement SEMICOL .)
    READ            reduce using rule 28 (instruction -> io_statement SEMICOL .)
    WRITE           reduce using rule 28 (instruction -> io_statement SEMICOL .)


state 56

    (29) assignment -> IDF EQUALS . expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . IDF
    (37) expression -> . IDF LBRACKET expression RBRACKET
    (38) expression -> . INTEGER
    (39) expression -> . FLOAT
    (40) expression -> . CHAR

    LPAREN          shift and go to state 66
    IDF             shift and go to state 64
    INTEGER         shift and go to state 67
    FLOAT           shift and go to state 68
    CHAR            shift and go to state 69

    expression                     shift and go to state 65

state 57

    (30) array_assignment -> IDF LBRACKET . expression RBRACKET EQUALS expression
    (31) expression -> . expression PLUS expression
    (32) expression -> . expression MINUS expression
    (33) expression -> . expression MULTIPLY expression
    (34) expression -> . expression DIVIDE expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . IDF
    (37) expression -> . IDF LBRACKET expression RBRACKET
    (38) expression -> . INTEGER
    (39) expression -> . FLOAT
    (40) expression -> . CHAR

    LPAREN          shift and go to state 66
    IDF             shift and go to state 64
    INTEGER         shift and go to state 67
    FLOAT           shift and go to state 68
    CHAR            shift and go to state 69
